fix: low visibility of footer links on mobile devices

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -46,8 +46,12 @@
         right: 1rem;
         max-width: none;
         transform: translateY(-49.5%);
-        opacity: 0.9;
+        opacity: 0.3;
         pointer-events: none;
+
+        @media (min-width: 990px) {
+          opacity: 0.9;
+        }
       }
     }
   }
